fixed some references

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -92,7 +92,7 @@
   pages = {623--634}
 }
 
-@article{carissan_what_2006-1,
+@article{carissan_what_2006,
   volume = {106},
   language = {en},
   number = {3},
