Recovering a comment on the Hunzinaga pseudos

--- a/main.tex
+++ b/main.tex
@@ -202,6 +202,10 @@ Coulomb and exchange interactions, for which Hunzinaga proposed a spectral formu
 \hat{V} = \frac{1}{r}\left[\sum_IA_I\exp(-\alpha r^2)+\sum_JB_Jr\exp(-\beta r^2)\right]
 \end{equation}
 
+To take into account the fact that dormant electrons are removed from the
+system, the nuclear charge is modified by the $Z_c$ value.
+Yet, as the effective charge felt by the active electrons is likely not to be an integer,
+the modification of the value of the nuclear charge is scaled in $\hat{V}$.
 In this operator we notice that the 1/r behavior is mantained for the first term 
 (the Coulomb one).
 
