--- a/main.tex
+++ b/main.tex
@@ -601,8 +601,9 @@ PBE0 & 3.483 & 1.0 & -10.325 \\
 
 Taking these new potentials we test them against a series of chain alkenes up to length C\(_{12}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, before taking the reference geometry and applying the pseudo-potentials from Table \ref{table:ethene_excitations}, optimised for ethene under HF. Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing ionisation and excitation energies seen in the reference systems seems to be well replicated by the pseudo-alkenes, with the energies following the same gradient.
 
-Also compared are TD-DFT results for this system and that in Carissan and Drujon \cite{drujon_pseudopotentials_2013}, which match to within 3\%. It seems the previous results have been accurately replicated.
-Let us remind here that unlike in our previous work\ref{drujon_pseudopotentials_2013}
+Also compared are TD-DFT results for this system and results of a previous work of some of us, which match to within 3\%.
+It seems the previous results have been accurately replicated.\cite{drujon_pseudopotentials_2013}
+Let us remind here that unlike in our previous work
 the potentials optimized in this article are fully defined by the position
 of the pseudo atom: no potentials are placed at the center of any bond.
 
